trunk/Archive2/42/ebd7a0785d580b/output
+ clang++ -std=c++11 -O0 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp:14:9: error: void function 'HandledCall' must not return a value
        return {};
        ^      ~~
main.cpp:34:5: note: in instantiation of function template specialization 'HandledCall<void (&)()>' requested here
    HandledCall(bar);
    ^
1 error generated.
